internal/parser/oberon_parser.go
// Code generated from /home/konstantin/go/Compilers_project/grammar/oberon.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // oberon
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type oberonParser struct {
	*antlr.BaseParser
}

var OberonParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func oberonParserInit() {
	staticData := &OberonParserStaticData
	staticData.LiteralNames = []string{
		"", "'.'", "'*'", "'H'", "'E'", "'+'", "'-'", "'='", "','", "'('", "')'",
		"';'", "':'", "'#'", "'<'", "'<='", "'>'", "'>='", "'/'", "'&'", "'~'",
		"'['", "']'", "'^'", "'{'", "'}'", "'..'", "':='", "'|'", "'ARRAY'",
		"'OF'", "'END'", "'POINTER'", "'TO'", "'RECORD'", "'PROCEDURE'", "'IN'",
		"'IS'", "'OR'", "'DIV'", "'MOD'", "'NIL'", "'TRUE'", "'FALSE'", "'IF'",
		"'THEN'", "'ELSIF'", "'ELSE'", "'CASE'", "'WHILE'", "'DO'", "'REPEAT'",
		"'UNTIL'", "'FOR'", "'BY'", "'BEGIN'", "'RETURN'", "'CONST'", "'TYPE'",
		"'VAR'", "'MODULE'", "'IMPORT'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "ARRAY", "OF", "END",
		"POINTER", "TO", "RECORD", "PROCEDURE", "IN", "IS", "OR", "DIV", "MOD",
		"NIL", "TRUE", "FALSE", "IF", "THEN", "ELSIF", "ELSE", "CASE", "WHILE",
		"DO", "REPEAT", "UNTIL", "FOR", "BY", "BEGIN", "RETURN", "CONST", "TYPE",
		"VAR", "MODULE", "IMPORT", "STRING", "HEXDIGIT", "IDENT", "LETTER",
		"DIGIT", "COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"ident", "qualident", "identdef", "integer", "real", "scaleFactor",
		"number", "constDeclaration", "constExpression", "typeDeclaration",
		"type_", "arrayType", "length", "recordType", "baseType", "fieldListSequence",
		"fieldList", "identList", "pointerType", "procedureType", "variableDeclaration",
		"expression", "relation", "simpleExpression", "addOperator", "term",
		"mulOperator", "factor", "designator", "selector", "set_", "element",
		"expList", "actualParameters", "statement", "assignment", "procedureCall",
		"statementSequence", "ifStatement", "caseStatement", "case_", "caseLabelList",
		"labelRange", "label", "whileStatement", "repeatStatement", "forStatement",
		"procedureDeclaration", "procedureHeading", "procedureBody", "declarationSequence",
		"formalParameters", "fPSection", "formalType", "module", "importList",
		"import_",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// oberonParserInit initializes any static state used to implement oberonParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewoberonParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func OberonParserInit() {
	staticData := &OberonParserStaticData
	staticData.once.Do(oberonParserInit)
}

// NewoberonParser produces a new parser instance for the optional input antlr.TokenStream.
func NewoberonParser(input antlr.TokenStream) *oberonParser {
	OberonParserInit()
	this := new(oberonParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &OberonParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "oberon.g4"

	return this
}

// oberonParser tokens.
const (
	oberonParserEOF       = antlr.TokenEOF
	oberonParserT__0      = 1
	oberonParserT__1      = 2
	oberonParserT__2      = 3
	oberonParserT__3      = 4
	oberonParserT__4      = 5
	oberonParserT__5      = 6
	oberonParserT__6      = 7
	oberonParserT__7      = 8
	oberonParserT__8      = 9
	oberonParserT__9      = 10
	oberonParserT__10     = 11
	oberonParserT__11     = 12
	oberonParserT__12     = 13
	oberonParserT__13     = 14
	oberonParserT__14     = 15
	oberonParserT__15     = 16
	oberonParserT__16     = 17
	oberonParserT__17     = 18
	oberonParserT__18     = 19
	oberonParserT__19     = 20
	oberonParserT__20     = 21
	oberonParserT__21     = 22
	oberonParserT__22     = 23
	oberonParserT__23     = 24
	oberonParserT__24     = 25
	oberonParserT__25     = 26
	oberonParserT__26     = 27
	oberonParserT__27     = 28
	oberonParserARRAY     = 29
	oberonParserOF        = 30
	oberonParserEND       = 31
	oberonParserPOINTER   = 32
	oberonParserTO        = 33
	oberonParserRECORD    = 34
	oberonParserPROCEDURE = 35
	oberonParserIN        = 36
	oberonParserIS        = 37
	oberonParserOR        = 38
	oberonParserDIV       = 39
	oberonParserMOD       = 40
	oberonParserNIL       = 41
	oberonParserTRUE      = 42
	oberonParserFALSE     = 43
	oberonParserIF        = 44
	oberonParserTHEN      = 45
	oberonParserELSIF     = 46
	oberonParserELSE      = 47
	oberonParserCASE      = 48
	oberonParserWHILE     = 49
	oberonParserDO        = 50
	oberonParserREPEAT    = 51
	oberonParserUNTIL     = 52
	oberonParserFOR       = 53
	oberonParserBY        = 54
	oberonParserBEGIN     = 55
	oberonParserRETURN    = 56
	oberonParserCONST     = 57
	oberonParserTYPE      = 58
	oberonParserVAR       = 59
	oberonParserMODULE    = 60
	oberonParserIMPORT    = 61
	oberonParserSTRING    = 62
	oberonParserHEXDIGIT  = 63
	oberonParserIDENT     = 64
	oberonParserLETTER    = 65
	oberonParserDIGIT     = 66
	oberonParserCOMMENT   = 67
	oberonParserWS        = 68
)

// oberonParser rules.
const (
	oberonParserRULE_ident                = 0
	oberonParserRULE_qualident            = 1
	oberonParserRULE_identdef             = 2
	oberonParserRULE_integer              = 3
	oberonParserRULE_real                 = 4
	oberonParserRULE_scaleFactor          = 5
	oberonParserRULE_number               = 6
	oberonParserRULE_constDeclaration     = 7
	oberonParserRULE_constExpression      = 8
	oberonParserRULE_typeDeclaration      = 9
	oberonParserRULE_type_                = 10
	oberonParserRULE_arrayType            = 11
	oberonParserRULE_length               = 12
	oberonParserRULE_recordType           = 13
	oberonParserRULE_baseType             = 14
	oberonParserRULE_fieldListSequence    = 15
	oberonParserRULE_fieldList            = 16
	oberonParserRULE_identList            = 17
	oberonParserRULE_pointerType          = 18
	oberonParserRULE_procedureType        = 19
	oberonParserRULE_variableDeclaration  = 20
	oberonParserRULE_expression           = 21
	oberonParserRULE_relation             = 22
	oberonParserRULE_simpleExpression     = 23
	oberonParserRULE_addOperator          = 24
	oberonParserRULE_term                 = 25
	oberonParserRULE_mulOperator          = 26
	oberonParserRULE_factor               = 27
	oberonParserRULE_designator           = 28
	oberonParserRULE_selector             = 29
	oberonParserRULE_set_                 = 30
	oberonParserRULE_element              = 31
	oberonParserRULE_expList              = 32
	oberonParserRULE_actualParameters     = 33
	oberonParserRULE_statement            = 34
	oberonParserRULE_assignment           = 35
	oberonParserRULE_procedureCall        = 36
	oberonParserRULE_statementSequence    = 37
	oberonParserRULE_ifStatement          = 38
	oberonParserRULE_caseStatement        = 39
	oberonParserRULE_case_                = 40
	oberonParserRULE_caseLabelList        = 41
	oberonParserRULE_labelRange           = 42
	oberonParserRULE_label                = 43
	oberonParserRULE_whileStatement       = 44
	oberonParserRULE_repeatStatement      = 45
	oberonParserRULE_forStatement         = 46
	oberonParserRULE_procedureDeclaration = 47
	oberonParserRULE_procedureHeading     = 48
	oberonParserRULE_procedureBody        = 49
	oberonParserRULE_declarationSequence  = 50
	oberonParserRULE_formalParameters     = 51
	oberonParserRULE_fPSection            = 52
	oberonParserRULE_formalType           = 53
	oberonParserRULE_module               = 54
	oberonParserRULE_importList           = 55
	oberonParserRULE_import_              = 56
)

// IIdentContext is an interface to support dynamic dispatch.
type IIdentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENT() antlr.TerminalNode

	// IsIdentContext differentiates from other interfaces.
	IsIdentContext()
}

type IdentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentContext() *IdentContext {
	var p = new(IdentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_ident
	return p
}

func InitEmptyIdentContext(p *IdentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_ident
}

func (*IdentContext) IsIdentContext() {}

func NewIdentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentContext {
	var p = new(IdentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = oberonParserRULE_ident

	return p
}

func (s *IdentContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentContext) IDENT() antlr.TerminalNode {
	return s.GetToken(oberonParserIDENT, 0)
}

func (s *IdentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.EnterIdent(s)
	}
}

func (s *IdentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.ExitIdent(s)
	}
}

func (s *IdentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case oberonVisitor:
		return t.VisitIdent(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *oberonParser) Ident() (localctx IIdentContext) {
	localctx = NewIdentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, oberonParserRULE_ident)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(114)
		p.Match(oberonParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IQualidentContext is an interface to support dynamic dispatch.
type IQualidentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIdent() []IIdentContext
	Ident(i int) IIdentContext

	// IsQualidentContext differentiates from other interfaces.
	IsQualidentContext()
}

type QualidentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQualidentContext() *QualidentContext {
	var p = new(QualidentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_qualident
	return p
}

func InitEmptyQualidentContext(p *QualidentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_qualident
}

func (*QualidentContext) IsQualidentContext() {}

func NewQualidentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QualidentContext {
	var p = new(QualidentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = oberonParserRULE_qualident

	return p
}

func (s *QualidentContext) GetParser() antlr.Parser { return s.parser }

func (s *QualidentContext) AllIdent() []IIdentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IIdentContext); ok {
			len++
		}
	}

	tst := make([]IIdentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IIdentContext); ok {
			tst[i] = t.(IIdentContext)
			i++
		}
	}

	return tst
}

func (s *QualidentContext) Ident(i int) IIdentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *QualidentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QualidentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QualidentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.EnterQualident(s)
	}
}

func (s *QualidentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.ExitQualident(s)
	}
}

func (s *QualidentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case oberonVisitor:
		return t.VisitQualident(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *oberonParser) Qualident() (localctx IQualidentContext) {
	localctx = NewQualidentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, oberonParserRULE_qualident)
	p.EnterOuterAlt(localctx, 1)
	p.SetState(119)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(116)
			p.Ident()
		}
		{
			p.SetState(117)
			p.Match(oberonParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	{
		p.SetState(121)
		p.Ident()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IIdentdefContext is an interface to support dynamic dispatch.
type IIdentdefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Ident() IIdentContext

	// IsIdentdefContext differentiates from other interfaces.
	IsIdentdefContext()
}

type IdentdefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentdefContext() *IdentdefContext {
	var p = new(IdentdefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_identdef
	return p
}

func InitEmptyIdentdefContext(p *IdentdefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_identdef
}

func (*IdentdefContext) IsIdentdefContext() {}

func NewIdentdefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentdefContext {
	var p = new(IdentdefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = oberonParserRULE_identdef

	return p
}

func (s *IdentdefContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentdefContext) Ident() IIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *IdentdefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentdefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentdefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.EnterIdentdef(s)
	}
}

func (s *IdentdefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.ExitIdentdef(s)
	}
}

func (s *IdentdefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case oberonVisitor:
		return t.VisitIdentdef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *oberonParser) Identdef() (localctx IIdentdefContext) {
	localctx = NewIdentdefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, oberonParserRULE_identdef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(123)
		p.Ident()
	}
	p.SetState(125)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == oberonParserT__1 {
		{
			p.SetState(124)
			p.Match(oberonParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IIntegerContext is an interface to support dynamic dispatch.
type IIntegerContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllDIGIT() []antlr.TerminalNode
	DIGIT(i int) antlr.TerminalNode
	AllHEXDIGIT() []antlr.TerminalNode
	HEXDIGIT(i int) antlr.TerminalNode

	// IsIntegerContext differentiates from other interfaces.
	IsIntegerContext()
}

type IntegerContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIntegerContext() *IntegerContext {
	var p = new(IntegerContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_integer
	return p
}

func InitEmptyIntegerContext(p *IntegerContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_integer
}

func (*IntegerContext) IsIntegerContext() {}

func NewIntegerContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IntegerContext {
	var p = new(IntegerContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = oberonParserRULE_integer

	return p
}

func (s *IntegerContext) GetParser() antlr.Parser { return s.parser }

func (s *IntegerContext) AllDIGIT() []antlr.TerminalNode {
	return s.GetTokens(oberonParserDIGIT)
}

func (s *IntegerContext) DIGIT(i int) antlr.TerminalNode {
	return s.GetToken(oberonParserDIGIT, i)
}

func (s *IntegerContext) AllHEXDIGIT() []antlr.TerminalNode {
	return s.GetTokens(oberonParserHEXDIGIT)
}

func (s *IntegerContext) HEXDIGIT(i int) antlr.TerminalNode {
	return s.GetToken(oberonParserHEXDIGIT, i)
}

func (s *IntegerContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IntegerContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IntegerContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.EnterInteger(s)
	}
}

func (s *IntegerContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(oberonListener); ok {
		listenerT.ExitInteger(s)
	}
}

func (s *IntegerContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case oberonVisitor:
		return t.VisitInteger(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *oberonParser) Integer() (localctx IIntegerContext) {
	localctx = NewIntegerContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, oberonParserRULE_integer)
	var _la int

	p.SetState(140)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		p.SetState(128)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == oberonParserDIGIT {
			{
				p.SetState(127)
				p.Match(oberonParserDIGIT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

			p.SetState(130)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(132)
			p.Match(oberonParserDIGIT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(136)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == oberonParserHEXDIGIT {
			{
				p.SetState(133)
				p.Match(oberonParserHEXDIGIT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

			p.SetState(138)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(139)
			p.Match(oberonParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRealContext is an interface to support dynamic dispatch.
type IRealContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllDIGIT() []antlr.TerminalNode
	DIGIT(i int) antlr.TerminalNode
	ScaleFactor() IScaleFactorContext

	// IsRealContext differentiates from other interfaces.
	IsRealContext()
}

type RealContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRealContext() *RealContext {
	var p = new(RealContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_real
	return p
}

func InitEmptyRealContext(p *RealContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = oberonParserRULE_real
}
